--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,16 +6,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Comunidad El Club del Filete, y recursos de su creador Cristian Blanco"
+      name="google-site-verification"
+      content="rByfDud8G-bDaL522ZBdA5DjZKKn1D4Ns7z4FA92mMM"
     />
     <link rel="apple-touch-icon" href="/clubFilete192.png" />
     <style>
-      @import url("https://fonts.googleapis.com/css2?family=Rye&display=swap");
-      @import url("https://fonts.googleapis.com/css2?family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap");
       @import url("https://fonts.googleapis.com/css2?family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
     </style>
+
+    <!-- Título y descripción básicos -->
     <title>El Club del Filete</title>
+    <meta
+      name="description"
+      content="Explora el arte del fileteado porteño, sus orígenes, y la cálida comunidad de El Club del Filete."
+      data-rh="true"
+    />
+    <meta
+      name="keywords"
+      content="fileteo porteño, filete porteño, arte, diseño, Buenos Aires, cultura argentina"
+    />
+
+    <!-- Open Graph (para redes sociales y buscadores) -->
+    <meta property="og:title" content="El Club del Filete" />
+    <meta
+      property="og:description"
+      content="Explora el arte del fileteado porteño, sus orígenes, y la cálida comunidad de El Club del Filete."
+    />
+    <meta
+      property="og:image"
+      content="https://elclubdelfilete.com.ar/clubFilete192.png"
+    />
+    <meta property="og:url" content="https://elclubdelfilete.com.ar" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="El Club del Filete" />
+    <meta
+      name="twitter:description"
+      content="Explora el arte del fileteado porteño, sus orígenes, y la cálida comunidad de El Club del Filete."
+    />
+    <meta
+      name="twitter:image"
+      content="https://elclubdelfilete.com.ar/clubFilete192.png"
+    />
   </head>
   <body>
     <div id="root"></div>
