--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,6 +12,7 @@
     <link rel="apple-touch-icon" href="/clubFilete192.png" />
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+      @import url("https://fonts.googleapis.com/css2?family=Afacad:ital,wght@0,400..700;1,400..700&family=Allura&display=swap");
     </style>
 
     <!-- Título y descripción básicos -->
